--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,9 @@ AllCops:
   Exclude:
     - "Guardfile"
     - "Rakefile"
-
+ 
+  NewCops: disable
+  
   DisplayCopNames: true
 
 Layout/LineLength:
